[gd_scene load_steps=18 format=2]

[ext_resource path="res://src/Entity/Key.gd" type="Script" id=1]
[ext_resource path="res://assets/images/entities/key.png" type="Texture" id=2]
[ext_resource path="res://src/Entity/Shadow.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/images/particles/star.png" type="Texture" id=4]
[ext_resource path="res://src/Entity/ScriptingArea.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/Entity/Key.gdshader" type="Shader" id=6]
[ext_resource path="res://assets/sounds/key_travel.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/sounds/key_pickup.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/sounds/key_punch.wav" type="AudioStream" id=9]

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 6 )
shader_param/blocked = null
shader_param/blink = null

[sub_resource type="Animation" id=7]
resource_name = "Disappear"
length = 2.0
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 2, 0.5, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.5, 1.5 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.35, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "_unlock_cage"
}, {
"args": [  ],
"method": "destroy"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CPUParticles2D:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.35, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Shadow:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.35 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=1]
resource_name = "Levitate"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -32 ), Vector2( 0, -36 ), Vector2( 0, -32 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -32 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CPUParticles2D:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Shadow:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Curve" id=8]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.620833, 0.991379 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -8.01722, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=9]
offsets = PoolRealArray( 0.483412, 1 )
colors = PoolColorArray( 1, 0.931183, 0.199219, 1, 1, 1, 1, 0 )

[sub_resource type="CircleShape2D" id=5]
radius = 20.0

[sub_resource type="CircleShape2D" id=10]
radius = 24.0

[node name="Key" type="KinematicBody2D" groups=["Key"]]
collision_layer = 0
collision_mask = 0
script = ExtResource( 1 )
blocked = true
node_limit_UPDATE = 0
node_limit_COLLISION = 0
node_limit_TRIGGER = 0
node_limit_PRESSED = 0
node_limit_RELEASED = 0
node_limit_MOVE_FORWARD = 0
node_limit_MOVE_RIGHT = 0
node_limit_MOVE_DOWN = 0
node_limit_MOVE_LEFT = 0
node_limit_MOVE_UP = 0
node_limit_ROTATE_LEFT = 0
node_limit_ROTATE_RIGHT = 0
node_limit_WAIT = 0
node_limit_SHOOT_TRIGGER = 0
node_limit_SHOOT = 0
node_limit_OPEN = 0
node_limit_CLOSE = 0
node_limit_IF = 0
node_limit_AND = 0
node_limit_OR = 0
node_limit_EQUAL = 0
node_limit_NOT_EQUAL = 0
node_limit_GREATER = 0
node_limit_GREATER_EQUAL = 0
node_limit_LESS = 0
node_limit_LESS_EQUAL = 0
node_limit_COMPARE_ENTITY = 0
node_limit_COMPARE_STRING = 0
node_limit_REPEAT = 0
node_limit_PATH_AHEAD = 0
node_limit_PATH_BACK = 0
node_limit_PATH_LEFT = 0
node_limit_PATH_RIGHT = 0
node_limit_PASSENGERS = 0
node_limit_NUMBER = 0
node_limit_STRING = 0
node_limit_BOOL = 0
node_limit_ENTITY = 0
node_limit_POSITION = 0
node_limit_DIRECTION = 0

[node name="Shadow" parent="." instance=ExtResource( 3 )]

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 4 )
position = Vector2( 0, -32 )
rotation = -0.523599
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Disappear = SubResource( 7 )
anims/Levitate = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2( 0, -28 )
emitting = false
amount = 20
lifetime = 0.5
one_shot = true
explosiveness = 0.9
texture = ExtResource( 4 )
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 200.0
initial_velocity_random = 0.2
damping = 400.0
scale_amount = 0.5
scale_amount_curve = SubResource( 8 )
color_ramp = SubResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 5 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 5 )

[node name="ScriptingArea" parent="." instance=ExtResource( 5 )]
position = Vector2( 0, -28 )
shape_2d = SubResource( 10 )

[node name="PickUpSfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
bus = "Sfx"

[node name="TravelSfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
bus = "Sfx"

[node name="PunchSfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
bus = "Sfx"
